--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "@babel/preset-env": "^7.6.3",
     "babel-preset-minify": "^0.5.1",
     "squirrelly": "^7.7.0",
-    "babel-plugin-remove-import-export": "^1.1.0"
+    "babel-plugin-remove-import-export": "^1.1.0",
+    "minimist": ">=1.2.2"
   },
   "devDependencies": {
   }
